--- a/solution.html
+++ b/solution.html
@@ -119,14 +119,96 @@ Second number:<input type="number" id="number6">
  <button type="button" onclick="check_neg_pos()">click here</button>
 <p id="neg_pos"></p>
 
+<!--question no 31-->
+<hr>
+<h2>Problem no 31</h2>
+First number: <input type="number" id="text9">
+Second number:<input type="number" id="text10">
+third number:<input type="number" id="text11">
+<br>
+ <button type="button" onclick="biggervalue()">click here</button>
+<p id="result9"></p>
 
 
+<!---question no 32-->
+
+<hr>
+<h2>Problem no 32</h2>
+First number: <input type="number" id="text12">
+Second number:<input type="number" id="text13">
+<br>
+ <button type="button" onclick="nearest100()">click here</button>
+<p id="result10"></p>
+
+<!---queston no 33-->
 
 
+<hr>
+<h2>Problem no 33</h2>
+First number: <input type="number" id="text14">
+Second number:<input type="number" id="text15">
+<br>
+ <button type="button" onclick="innervalue()">click here</button>
+<p id="result11"></p>
+<!--question no 34-->
+<hr>
+<h2>Problem no 34</h2>
+First number: <input type="number" id="text16">
+Second number:<input type="number" id="text17">
+<br>
+ <button type="button" onclick="innerbigger()">click here</button>
+<p id="result12"></p>
 
+<!--question no 37-->
+<hr>
+<h2>Problem no 37</h2>
+Input value: <input type="text" id="text18">
+<br>
+ <button type="button" onclick="uppertolower()">click here</button>
+<p id="result13"></p>
+<!---question no 38-->
+<hr>
+<h2>Problem no 38</h2>
+Input value: <input type="number" id="text19">
+<br>
+ <button type="button" onclick="greating()">click here</button>
+<p id="result14"></p>
+<!--question no 39-->
+<hr>
+<h2>Problem no 39</h2>
+Input value 1st: <input type="number" id="text20">
+Input value 2nd: <input type="number" id="text21">
+<br>
+ <button type="button" onclick="sum10()">click here</button>
+<p id="result15"></p>
+<!--question no 40-->
+<hr>
+<h2>Problem no 40</h2>
+Input value 1st: <input type="number" id="text22">
+Input value 2nd: <input type="number" id="text23">
+<br>
+ <button type="button" onclick="check_from_two()">click here</button>
+<p id="result16"></p>
+<!---question no 41-->
+<hr>
+<h2>Problem no 41</h2>
+Input value 1st: <input type="number" id="text24">
+Input value 2nd: <input type="number" id="text25">
+Input value 3rd: <input type="number" id="text26">
 
+<br>
+ <button type="button" onclick="samenumber()">click here</button>
+<p id="result17"></p>
+<!---question no 43-->
+<hr>
+<h2>Problem no 43</h2>
+Input value 1st: <input type="number" id="text27">
+Input value 2nd: <input type="number" id="text28">
+Input value 3rd: <input type="number" id="text29">
 
-
+<br>
+ <button type="button" onclick="samelast_digit()">click here</button>
+<p id="result18"></p>
 
 
 
