--- a/solution.html
+++ b/solution.html
@@ -209,6 +209,33 @@ Input value 3rd: <input type="number" id="text29">
 <br>
  <button type="button" onclick="samelast_digit()">click here</button>
 <p id="result18"></p>
+<!-----question no 53-->
+<hr>
+<h2>Problem no 53</h2>
+Input value 1st: <input type="text" id="text40">
+<br>
+ <button type="button" onclick="checka_b()">click here</button>
+<p id="result30"></p>
+
+<!----question no 54-->
+
+<hr>
+<h2>Problem no 54</h2>
+Input value 1st: <input type="text" id="text41">
+<br>
+ <button type="button" onclick="vowel_count()">click here</button>
+<p id="result31"></p>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
