--- a/solution.html
+++ b/solution.html
@@ -226,18 +226,68 @@ Input value 1st: <input type="text" id="text41">
  <button type="button" onclick="vowel_count()">click here</button>
 <p id="result31"></p>
 
+<!---question no 60-->
+
+<hr>
+<h2>Problem no 60</h2>
+Input value 1st: <input type="text" id="text47">
+<br>
+ <button type="button" onclick="cutting()">click here</button>
+<p id="result37"></p>
+
+<!---question no 61-->
 
 
+<hr>
+<h2>Problem no 61</h2>
+Input value 1st: <input type="text" id="text48">
+Input value 1st: <input type="text" id="text49">
 
+<br>
+ <button type="button" onclick="twoconcat()">click here</button>
+<p id="result38"></p>
 
+<!----question no 62-->
 
+<hr>
+<h2>Problem no 62</h2>
+Input value 1st: <input type="text" id="text50">
+<br>
+ <button type="button" onclick="addthree()">click here</button>
+<p id="result40"></p>
 
+<!-----question no 63-->
+<hr>
+<h2>Problem no 63</h2>
+Input value 1st: <input type="text" id="text51">
+<br>
+ <button type="button" onclick="midd_cha()">click here</button>
+<p id="result41"></p>
 
+<!----question no 64-->
+<hr>
+<h2>Problem no 64</h2>
+Input value 1st: <input type="text" id="text52">
+Input value 1st: <input type="text" id="text53">
+<br>
+ <button type="button" onclick="compair()">click here</button>
+<p id="result43"></p>
+<!-----question no 65-->
 
+<hr>
+<h2>Problem no 65</h2>
+Input value 1st: <input type="text" id="text54">
+<br>
+ <button type="button" onclick="end_with_Script()">click here</button>
+<p id="result44"></p>
+<!----question no 66-->
 
-
-
-
+<hr>
+<h2>Problem no 66</h2>
+Input value 1st: <input type="text" id="text55">
+<br>
+ <button type="button" onclick="display_city_name()">click here</button>
+<p id="result45"></p>
 
 
 
