add 93 html file

--- a/solution.html
+++ b/solution.html
@@ -289,6 +289,83 @@ Input value 1st: <input type="text" id="text55">
  <button type="button" onclick="display_city_name()">click here</button>
 <p id="result45"></p>
 
+<!----question no 81-->
+<hr>
+<h2>Problem no 81</h2>
+Input value 1st: <input type="text" id="text70">
+<br>
+ <button type="button" onclick="add_digits()">click here</button>
+<p id="result60"></p>
+<!----question no 83-->
+
+<hr>
+<h2>Problem no 83</h2>
+<br>
+<button type="button" onclick="array()">click here</button>
+<p id="result62"></p>
+
+<!----question no 85-->
+
+<hr>
+<h2>Problem no 85</h2>
+<br>
+<button type="button" onclick="sum_two_array()">click here</button>
+<p id="result63"></p>
+
+<!-----question no 86-->
+
+
+<hr>
+<h2>Problem no 86</h2>
+Input value 1st: <input type="number" id="text76">
+
+<br>
+<button type="button" onclick="Types_of_angles()">click here</button>
+<p id="result66"></p>
+
+<!----question no 88-->
+
+<hr>
+<h2>Problem no 88</h2>
+
+<br>
+<button type="button" onclick="Check_whether()">click here</button>
+<p id="result68"></p>
+
+
+<!----question no 89-->
+
+<hr>
+<h2>Problem no 89</h2>
+Input value 1st: <input type="number" id="text77">
+Input value 2nd: <input type="number" id="text78">
+Input value 3rd: <input type="number" id="text79">
+
+<br>
+<button type="button" onclick="can_replace()">click here</button>
+<p id="result69"></p>
+
+<!----question no 90-->
+
+<hr>
+<h2>Problem no 90</h2>
+
+<br>
+<button type="button" onclick="greatest_3rd_element()">click here</button>
+<p id="result70"></p>
+
+<!----question no 93-->
+
+<hr>
+<h2>Problem no 93</h2>
+
+<br>
+<button type="button" onclick="max_min_difference()">click here</button>
+<p id="result73"></p>
+
+
+
+
 
 
     <script src="SOLUTION.js">
